--- a/guia_de_moteis_app/pubspec.yaml
+++ b/guia_de_moteis_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   http: ^1.3.0
   flutter_launcher_icons: ^0.14.3
+  provider: ^6.1.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
